<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/allSensors">

    <fragment
        android:id="@+id/metalDetector"
        android:name="com.akshayAshokCode.androidsensors.presentation.fragments.MetalDetector"
        android:label="@string/nav_label_metal_detector" />
    <fragment
        android:id="@+id/gravityMeter"
        android:name="com.akshayAshokCode.androidsensors.presentation.fragments.GravityMeter"
        android:label="@string/nav_label_gravity_meter" />
    <fragment
        android:id="@+id/bubbleLevelTool"
        android:name="com.akshayAshokCode.androidsensors.presentation.fragments.BubbleLevelTool"
        android:label="@string/nav_label_bubble_level" />
    <fragment
        android:id="@+id/allSensors"
        android:name="com.akshayAshokCode.androidsensors.presentation.fragments.AllSensors"
        android:label="@string/nav_label_all_sensors" >
        <action
            android:id="@+id/action_allSensors_to_metalDetector"
            app:destination="@id/metalDetector" />
        <action
            android:id="@+id/action_allSensors_to_gravityMeter"
            app:destination="@id/gravityMeter" />
        <action
            android:id="@+id/action_allSensors_to_bubbleLevelTool"
            app:destination="@id/bubbleLevelTool" />
    </fragment>
</navigation>