<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/not_available"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lines="2"
            android:text="@string/gravity_meter_not_available"
            android:textColor="@color/colorPrimaryReverse"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/gravity_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/gravity_x"
                android:textColor="@color/colorPrimaryReverse"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gravity_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryReverse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/gravity_y"
                android:textColor="@color/colorPrimaryReverse"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gravity_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryReverse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/gravity_z"
                android:textColor="@color/colorPrimaryReverse"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gravity_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryReverse" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>